--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@google/genai": "^1.34.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "lucide-react": "^0.561.0"
+    "lucide-react": "^0.561.0",
+    "html2canvas": "1.4.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
